--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4"
   }
