--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "jest": "^24.9.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4"
   }
