--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "jest": "^24.9.0",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3"
   }
 }
